--- a/index.html
+++ b/index.html
@@ -132,6 +132,99 @@
   </div>
 </div>
 
+<div class="works">
+  <div class="container works__container">
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-1.png" 
+        alt="">
+        <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-2.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-3.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-4.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-5.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-6.png" 
+        alt="">
+        <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-7.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+    <div class="project">
+      <div class="project__content">
+        <img class="project__image" 
+        src="src/photo-8.png" 
+        alt="">
+         <div class="project__name">
+          <p class="project__title">Project Name</p>
+          <p class="project__text">User Interface Design</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
 </body>
 </html>
 
